# ast-line

./: .gitignore  .gitmodules  Cargo.toml  README.md
ast-line/: Cargo.toml
ast-line-core/: Cargo.toml
ast-line-core/src/: lib.rs
ast-line-core/src/config/: ignore_service.rs  mod.rs
ast-line-core/src/graph/: mod.rs
ast-line-core/src/ingestion/: filesystem_walker.rs  mod.rs  pipeline.rs
ast-line-core/src/ingestion/pipeline_phases/: communities.rs  cross_file.rs  mod.rs  parse.rs  scan.rs  structure.rs
ast-line-core/src/search/: bm25.rs  grep.rs  mod.rs
ast-line-core/src/storage/: git.rs  mod.rs  repo_manager.rs
ast-line-core/src/types/: graph.rs  meta.rs  mod.rs  pipeline.rs
ast-line/src/: main.rs
ast-line/src/cli/: analyze.rs  clean.rs  list.rs  mod.rs  query.rs  serve.rs  status.rs
ast-line/src/mcp/: mod.rs
ast-line/src/server/: mod.rs
ast-line/src/server/routes/: mod.rs
gitnexus-rs/: Cargo.toml  README.md
gitnexus-rs/src/: main.rs
gitnexus-rs/src/cli/: analyze.rs  mod.rs  status.rs
gitnexus-rs/src/config/: ignore_service.rs  mod.rs
gitnexus-rs/src/core/: mod.rs
gitnexus-rs/src/core/graph/: mod.rs
gitnexus-rs/src/core/ingestion/: filesystem_walker.rs  mod.rs  pipeline.rs
gitnexus-rs/src/core/ingestion/pipeline_phases/: mod.rs  scan.rs  structure.rs
gitnexus-rs/src/storage/: git.rs  repo_manager.rs
gitnexus-rs/src/types/: graph.rs  mod.rs  pipeline.rs
