[package]
name = "ast-line"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ast-line"
path = "src/main.rs"

[dependencies]
ast-line-core = { path = "../ast-line-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive", "color"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
colored = "2"
indicatif = "0.17"
async-stream = "0.3"
