[package]
name = "gitnexus"
version = "0.1.0"
edition = "2024"
description = "Graph-powered code intelligence for AI agents — Rust rewrite"
license = "PolyForm-Noncommercial-1.0.0"

[[bin]]
name = "gitnexus"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive", "color"] }
# Async runtime
tokio = { version = "1", features = ["full"] }
# .gitignore / ignore-file parsing
ignore = "0.4"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Error handling
anyhow = "1"
thiserror = "1"
# Progress reporting
indicatif = "0.17"
# Colored output
colored = "2"
# Home directory
home = "0.5"
# UUID generation
uuid = { version = "1", features = ["v4"] }
# Rayon for parallel iteration
rayon = "1"
